GMS-35 Fix attempt 3